@@ -370,7 +370,8 @@ $hash_version_codes = array(
 	"0.8.6g" => "0010",
 	"0.8.6h" => "0011",
 	"0.8.6i" => "0012",
-	"0.8.6j" => "0013"
+	"0.8.6j" => "0013",
+	"0.8.6k" => "0014"
 	);
 
 $hash_type_names = array(
